--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,14 @@
-body {
+@font-face {
+  font-family: 'Upheavtt';
+  src: local('Upheavtt'), url(./fonts/upheavtt.ttf) format('truetype');
+}
+
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body *{
+  font-family: "Upheavtt";
 }
