--- a/client/src/screens/game/gameScreen.module.css
+++ b/client/src/screens/game/gameScreen.module.css
@@ -1,12 +1,13 @@
 .container{
-    height: 100vh;
+    height: 96vh;
+    width: 96vw;
+    padding: 2vh 2vw 2vh 2vw;
     background-image: url("../../assets/board.png");
     background-size: cover;
     background-position: center;
     background-repeat: repeat-y;
     align-items: center;
     justify-items: center;
-
 
     display: grid;
     grid-template-columns: 40% 5% 5% 5% 5% 40%;
@@ -36,8 +37,28 @@
     grid-area: mc;
 }
 
+.player1Hand, .player2Hand, .player3Hand, .player4Hand{
+
+    width: 100%;
+    height: 100%;
+}
+
+.player1Hand:hover, .player2Hand:hover, .player3Hand:hover, .player4Hand:hover{
+    background-color: #0000000d;
+}
+
+.player1Field, .player2Field, .player3Field, .player4Field{
+    width: 100%;
+    height: 100%;
+}
+
+.player1Field:hover, .player2Field:hover, .player3Field:hover, .player4Field:hover{
+    background-color: #0000000d;
+}
+
 .player1Hand{
     grid-area: p1h;
+
 }
 
 .player2Hand{
