--- a/client/src/components/card/card.module.css
+++ b/client/src/components/card/card.module.css
@@ -1,19 +1,41 @@
+
 .card{
     height: fit-content;
-    width: 60px;
+    width: fit-content;
     cursor: pointer;
     margin: 0;
+    user-select: none;
 }
 
 .card img{
-    width: 150px;
+    user-select: none;
+    height: 17vh;
 }
 
+
 .card:hover{
-    transform: scale(1.3);
-    z-index: 1;
+    transform: scale(1.5);
 }
 
 .tilted{
     transform: rotate(90deg);
+    width: fit-content;
+    height: fit-content;
+}
+
+.cardMenu{
+    display: none;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.card:hover .cardMenu{
+    display: flex;
+}
+
+.counterDisplay{
+    background-color: brown;
+    width: 18px;
+    text-align: center;
+    border-radius: 2px;
 }
