--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,8 @@
 }
 
 body{
+  max-width: 100vw;
+  max-height: 100vh;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
