--- a/client/src/screens/lobby/lobbyScreen.module.css
+++ b/client/src/screens/lobby/lobbyScreen.module.css
@@ -11,14 +11,13 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-
-    padding-top: 100px;
+    padding-top: 5vh;
 }
 
 .empty{
     background-color: darkslategray;
     width: 300px;
-    height: 750px;
+    height: 735px;
     margin: 20px;
     border-radius: 5px;
 }
