--- a/client/src/components/modal/modal.module.css
+++ b/client/src/components/modal/modal.module.css
@@ -1,7 +1,3 @@
-.noDispaly {
-    display: none;
-}
-
 .modal {
     position: fixed;
     top: 0;
@@ -9,20 +5,19 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
+    padding-top: 5%;
 }
 
 .modalContent {
-    position: fixed;
+    grid-area: modal;
+    padding: 20px;
     background: whitesmoke;
     width: 80%;
     height: auto;
-    top: 50%;
-    left: 50%;
-    padding: 20px;
-    transform: translate(-50%, -50%);
+    margin: auto;
 }
 
-.controlBar{
+.controlBar {
     display: flex;
     justify-content: flex-end;
 }
